--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -37,3 +37,18 @@
 .link:hover {
     text-decoration: underline;
 }
+
+.logoutButton {
+    background-color: transparent;
+    border: none;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 20px;
+    text-decoration: underline;
+}
+
+.logoutButton:hover {
+    color: #ffcccb;
+}
