--- a/src/SelectDifficulty.module.css
+++ b/src/SelectDifficulty.module.css
@@ -9,9 +9,9 @@ html {
 .container {
     min-height: calc(100vh - 74px - 50px);
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 0 20px 40px 20px;
+    padding: 20px;
     box-sizing: border-box;
 }
 
@@ -30,13 +30,6 @@ html {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     line-height: 1.2;
-}
-
-.cardContainer {
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
 .grid, .cardContainer {
@@ -67,12 +60,11 @@ html {
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
-    flex-grow: 1;
-    padding-top: 350px; /* 👈 Push it a little from the top */
     gap: 30px;
     max-width: 1000px;
     width: 100%;
 }
+
 
 .level {
     font-size: 22px;
